# MiCAR-Compliance-and-Pan-European-Stablecoins

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  lefthook.yml
contracts/: Cargo.toml
contracts/compliance_hook/: Cargo.toml
contracts/compliance_hook/src/: lib.rs
contracts/compliance_hook/test_snapshots/tests/: test_approval_expires.1.json  test_approve_and_check.1.json  test_double_initialize_blocked.1.json  test_reject_marks_rejected.1.json  test_revoke_marks_revoked.1.json  test_unknown_tx_returns_none.1.json
contracts/emt_token/: Cargo.toml
contracts/emt_token/src/: lib.rs
contracts/emt_token/test_snapshots/tests/: test_accept_with_no_proposal_panics.1.json  test_approve_and_transfer_from.1.json  test_approve_zero_revokes.1.json  test_blocklisted_cannot_receive.1.json  test_burn.1.json  test_cancel_proposed_admin_clears_state.1.json  test_cancel_with_no_proposal_panics.1.json  test_clawback_below_balance.1.json  test_clawback_burns.1.json  test_double_initialize_blocked.1.json  test_extend_storage_ttl_actually_bumps_ttl.1.json  test_extend_storage_ttl_counts_writes.1.json  test_extend_storage_ttl_no_op_on_fresh_contract.1.json  test_extend_storage_ttl_runs_when_paused.1.json  test_metadata.1.json  test_mint_and_balance.1.json  test_paused_blocks_transfer.1.json  test_pending_admin_none_after_init.1.json  test_per_address_limit_overrides_global.1.json  test_propose_and_accept_admin.1.json  test_propose_current_admin_rejected.1.json  (+13 more)
contracts/oracle_interface/: Cargo.toml
contracts/oracle_interface/src/: lib.rs
(+50 files in other folders)
